fix: z-index調整

--- a/scss/project/_header.scss
+++ b/scss/project/_header.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 2;
+    z-index: 100;
     background-color: rgba(250, 250, 250);
 
     &__wrap {
@@ -103,7 +103,7 @@
             padding: 32px;
             background-color: white;
             transition: all 0.5s;
-            z-index: 999;
+            z-index: 3;
         }
 
         &.open {
